y.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: FunctionsAndDec $end

    1 FunctionsAndDec: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: TypeSpec FunctionDeclarator FuctionsAndDecExtra
    3                         | Declaration FuctionsAndDecExtra
    4                         | error SEMI FuctionsAndDecExtra

    5 FuctionsAndDecExtra: FunctionsAndDeclarations
    6                    | %empty

    7 TypeSpec: CHAR
    8         | INT
    9         | VOID
   10         | SHORT
   11         | DOUBLE

   12 FunctionDeclarator: ID LPAR ParameterList RPAR FunctionHelper

   13 ParameterList: TypeSpec ParameterDeclaration ParameterExtra

   14 ParameterExtra: COMMA TypeSpec ParameterDeclaration ParameterExtra
   15               | %empty

   16 ParameterDeclaration: ID
   17                     | %empty

   18 FunctionHelper: LBRACE FunctionBody RBRACE
   19               | SEMI

   20 FunctionBody: DeclarationsAndStatements
   21             | %empty

   22 DeclarationsAndStatements: StatementList DeclarationsAndStatementsRep
   23                          | Declaration DeclarationsAndStatementsRep

   24 DeclarationsAndStatementsRep: DeclarationsAndStatements
   25                             | %empty

   26 Declaration: TypeSpec Declarator DeclarationExtra
   27            | TypeSpec error SEMI

   28 DeclarationExtra: COMMA Declarator DeclarationExtra
   29                 | SEMI

   30 Declarator: ID ASSIGN Expr
   31           | ID

   32 StatementList: Statement
   33              | error SEMI

   34 Statement: Expr SEMI
   35          | SEMI
   36          | LBRACE StatementBrace
   37          | LBRACE RBRACE
   38          | LBRACE error RBRACE
   39          | IF LPAR Expr RPAR StatementList StatementElse
   40          | WHILE LPAR Expr RPAR StatementList
   41          | RETURN StatementReturn

   42 StatementBrace: Statement RBRACE
   43               | Statement StatementBrace
   44               | error SEMI

   45 StatementElse: ELSE StatementList
   46              | %empty

   47 StatementReturn: SEMI
   48                | Expr SEMI

   49 Expr: Expr ASSIGN Expr
   50     | Expr COMMA Expr
   51     | Expr PLUS Expr
   52     | Expr MINUS Expr
   53     | Expr MUL Expr
   54     | Expr DIV Expr
   55     | Expr MOD Expr
   56     | Expr OR Expr
   57     | Expr AND Expr
   58     | Expr BITWISEAND Expr
   59     | Expr BITWISEOR Expr
   60     | Expr BITWISEXOR Expr
   61     | Expr EQ Expr
   62     | Expr NE Expr
   63     | Expr LE Expr
   64     | Expr GE Expr
   65     | Expr LT Expr
   66     | Expr GT Expr
   67     | PLUS Expr
   68     | MINUS Expr
   69     | NOT Expr
   70     | ID LPAR ExprComma RPAR
   71     | ID LPAR error RPAR
   72     | LPAR Expr RPAR
   73     | LPAR error RPAR
   74     | REALLIT
   75     | CHRLIT
   76     | INTLIT
   77     | ID

   78 ExprComma: ExprComma COMMA Expr
   79          | Expr
   80          | %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 4 27 33 38 44 71 73
CHRLIT (258) 75
REALLIT (259) 74
INTLIT (260) 76
ID (261) 12 16 30 31 70 71 77
CHAR (262) 7
ELSE (263) 45
WHILE (264) 40
IF (265) 39
INT (266) 8
SHORT (267) 10
DOUBLE (268) 11
RETURN (269) 41
VOID (270) 9
BITWISEAND (271) 58
BITWISEOR (272) 59
BITWISEXOR (273) 60
AND (274) 57
ASSIGN (275) 30 49
MUL (276) 53
COMMA (277) 14 28 50 78
DIV (278) 54
EQ (279) 61
GE (280) 64
GT (281) 66
LBRACE (282) 18 36 37 38
LE (283) 63
LPAR (284) 12 39 40 70 71 72 73
LT (285) 65
MINUS (286) 52 68
MOD (287) 55
NE (288) 62
NOT (289) 69
OR (290) 56
PLUS (291) 51 67
RBRACE (292) 18 37 38 42
RPAR (293) 12 39 40 70 71 72 73
SEMI (294) 4 19 27 29 33 34 35 44 47 48
RESERVED (295)
"then" (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
FunctionsAndDec (43)
    on left: 1, on right: 0
FunctionsAndDeclarations (44)
    on left: 2 3 4, on right: 1 5
FuctionsAndDecExtra (45)
    on left: 5 6, on right: 2 3 4
TypeSpec (46)
    on left: 7 8 9 10 11, on right: 2 13 14 26 27
FunctionDeclarator (47)
    on left: 12, on right: 2
ParameterList (48)
    on left: 13, on right: 12
ParameterExtra (49)
    on left: 14 15, on right: 13 14
ParameterDeclaration (50)
    on left: 16 17, on right: 13 14
FunctionHelper (51)
    on left: 18 19, on right: 12
FunctionBody (52)
    on left: 20 21, on right: 18
DeclarationsAndStatements (53)
    on left: 22 23, on right: 20 24
DeclarationsAndStatementsRep (54)
    on left: 24 25, on right: 22 23
Declaration (55)
    on left: 26 27, on right: 3 23
DeclarationExtra (56)
    on left: 28 29, on right: 26 28
Declarator (57)
    on left: 30 31, on right: 26 28
StatementList (58)
    on left: 32 33, on right: 22 39 40 45
Statement (59)
    on left: 34 35 36 37 38 39 40 41, on right: 32 42 43
StatementBrace (60)
    on left: 42 43 44, on right: 36 43
StatementElse (61)
    on left: 45 46, on right: 39
StatementReturn (62)
    on left: 47 48, on right: 41
Expr (63)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77, on right: 30 34 39 40 48 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 72 78
    79
ExprComma (64)
    on left: 78 79 80, on right: 70 78


State 0

    0 $accept: . FunctionsAndDec $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    FunctionsAndDec           go to state 7
    FunctionsAndDeclarations  go to state 8
    TypeSpec                  go to state 9
    Declaration               go to state 10


State 1

    4 FunctionsAndDeclarations: error . SEMI FuctionsAndDecExtra

    SEMI  shift, and go to state 11


State 2

    7 TypeSpec: CHAR .

    $default  reduce using rule 7 (TypeSpec)


State 3

    8 TypeSpec: INT .

    $default  reduce using rule 8 (TypeSpec)


State 4

   10 TypeSpec: SHORT .

    $default  reduce using rule 10 (TypeSpec)


State 5

   11 TypeSpec: DOUBLE .

    $default  reduce using rule 11 (TypeSpec)


State 6

    9 TypeSpec: VOID .

    $default  reduce using rule 9 (TypeSpec)


State 7

    0 $accept: FunctionsAndDec . $end

    $end  shift, and go to state 12


State 8

    1 FunctionsAndDec: FunctionsAndDeclarations .

    $default  reduce using rule 1 (FunctionsAndDec)


State 9

    2 FunctionsAndDeclarations: TypeSpec . FunctionDeclarator FuctionsAndDecExtra
   26 Declaration: TypeSpec . Declarator DeclarationExtra
   27            | TypeSpec . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14

    FunctionDeclarator  go to state 15
    Declarator          go to state 16


State 10

    3 FunctionsAndDeclarations: Declaration . FuctionsAndDecExtra

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FuctionsAndDecExtra)

    FunctionsAndDeclarations  go to state 17
    FuctionsAndDecExtra       go to state 18
    TypeSpec                  go to state 9
    Declaration               go to state 10


State 11

    4 FunctionsAndDeclarations: error SEMI . FuctionsAndDecExtra

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FuctionsAndDecExtra)

    FunctionsAndDeclarations  go to state 17
    FuctionsAndDecExtra       go to state 19
    TypeSpec                  go to state 9
    Declaration               go to state 10


State 12

    0 $accept: FunctionsAndDec $end .

    $default  accept


State 13

   27 Declaration: TypeSpec error . SEMI

    SEMI  shift, and go to state 20


State 14

   12 FunctionDeclarator: ID . LPAR ParameterList RPAR FunctionHelper
   30 Declarator: ID . ASSIGN Expr
   31           | ID .

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 31 (Declarator)


State 15

    2 FunctionsAndDeclarations: TypeSpec FunctionDeclarator . FuctionsAndDecExtra

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FuctionsAndDecExtra)

    FunctionsAndDeclarations  go to state 17
    FuctionsAndDecExtra       go to state 23
    TypeSpec                  go to state 9
    Declaration               go to state 10


State 16

   26 Declaration: TypeSpec Declarator . DeclarationExtra

    COMMA  shift, and go to state 24
    SEMI   shift, and go to state 25

    DeclarationExtra  go to state 26


State 17

    5 FuctionsAndDecExtra: FunctionsAndDeclarations .

    $default  reduce using rule 5 (FuctionsAndDecExtra)


State 18

    3 FunctionsAndDeclarations: Declaration FuctionsAndDecExtra .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 19

    4 FunctionsAndDeclarations: error SEMI FuctionsAndDecExtra .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 20

   27 Declaration: TypeSpec error SEMI .

    $default  reduce using rule 27 (Declaration)


State 21

   30 Declarator: ID ASSIGN . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 35


State 22

   12 FunctionDeclarator: ID LPAR . ParameterList RPAR FunctionHelper

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    TypeSpec       go to state 36
    ParameterList  go to state 37


State 23

    2 FunctionsAndDeclarations: TypeSpec FunctionDeclarator FuctionsAndDecExtra .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 24

   28 DeclarationExtra: COMMA . Declarator DeclarationExtra

    ID  shift, and go to state 38

    Declarator  go to state 39


State 25

   29 DeclarationExtra: SEMI .

    $default  reduce using rule 29 (DeclarationExtra)


State 26

   26 Declaration: TypeSpec Declarator DeclarationExtra .

    $default  reduce using rule 26 (Declaration)


State 27

   75 Expr: CHRLIT .

    $default  reduce using rule 75 (Expr)


State 28

   74 Expr: REALLIT .

    $default  reduce using rule 74 (Expr)


State 29

   76 Expr: INTLIT .

    $default  reduce using rule 76 (Expr)


State 30

   70 Expr: ID . LPAR ExprComma RPAR
   71     | ID . LPAR error RPAR
   77     | ID .

    LPAR  shift, and go to state 40

    $default  reduce using rule 77 (Expr)


State 31

   72 Expr: LPAR . Expr RPAR
   73     | LPAR . error RPAR

    error    shift, and go to state 41
    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 42


State 32

   68 Expr: MINUS . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 43


State 33

   69 Expr: NOT . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 44


State 34

   67 Expr: PLUS . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 45


State 35

   30 Declarator: ID ASSIGN Expr .
   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr

    BITWISEAND  shift, and go to state 46
    BITWISEOR   shift, and go to state 47
    BITWISEXOR  shift, and go to state 48
    AND         shift, and go to state 49
    ASSIGN      shift, and go to state 50
    MUL         shift, and go to state 51
    DIV         shift, and go to state 53
    EQ          shift, and go to state 54
    GE          shift, and go to state 55
    GT          shift, and go to state 56
    LE          shift, and go to state 57
    LT          shift, and go to state 58
    MINUS       shift, and go to state 59
    MOD         shift, and go to state 60
    NE          shift, and go to state 61
    OR          shift, and go to state 62
    PLUS        shift, and go to state 63

    $default  reduce using rule 30 (Declarator)


State 36

   13 ParameterList: TypeSpec . ParameterDeclaration ParameterExtra

    ID  shift, and go to state 64

    $default  reduce using rule 17 (ParameterDeclaration)

    ParameterDeclaration  go to state 65


State 37

   12 FunctionDeclarator: ID LPAR ParameterList . RPAR FunctionHelper

    RPAR  shift, and go to state 66


State 38

   30 Declarator: ID . ASSIGN Expr
   31           | ID .

    ASSIGN  shift, and go to state 21

    $default  reduce using rule 31 (Declarator)


State 39

   28 DeclarationExtra: COMMA Declarator . DeclarationExtra

    COMMA  shift, and go to state 24
    SEMI   shift, and go to state 25

    DeclarationExtra  go to state 67


State 40

   70 Expr: ID LPAR . ExprComma RPAR
   71     | ID LPAR . error RPAR

    error    shift, and go to state 68
    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    COMMA  reduce using rule 80 (ExprComma)
    RPAR   reduce using rule 80 (ExprComma)

    Expr       go to state 69
    ExprComma  go to state 70


State 41

   73 Expr: LPAR error . RPAR

    RPAR  shift, and go to state 71


State 42

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr
   72     | LPAR Expr . RPAR

    BITWISEAND  shift, and go to state 46
    BITWISEOR   shift, and go to state 47
    BITWISEXOR  shift, and go to state 48
    AND         shift, and go to state 49
    ASSIGN      shift, and go to state 50
    MUL         shift, and go to state 51
    COMMA       shift, and go to state 52
    DIV         shift, and go to state 53
    EQ          shift, and go to state 54
    GE          shift, and go to state 55
    GT          shift, and go to state 56
    LE          shift, and go to state 57
    LT          shift, and go to state 58
    MINUS       shift, and go to state 59
    MOD         shift, and go to state 60
    NE          shift, and go to state 61
    OR          shift, and go to state 62
    PLUS        shift, and go to state 63
    RPAR        shift, and go to state 72


State 43

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr
   68     | MINUS Expr .

    $default  reduce using rule 68 (Expr)


State 44

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr
   69     | NOT Expr .

    $default  reduce using rule 69 (Expr)


State 45

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr
   67     | PLUS Expr .

    $default  reduce using rule 67 (Expr)


State 46

   58 Expr: Expr BITWISEAND . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 73


State 47

   59 Expr: Expr BITWISEOR . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 74


State 48

   60 Expr: Expr BITWISEXOR . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 75


State 49

   57 Expr: Expr AND . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 76


State 50

   49 Expr: Expr ASSIGN . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 77


State 51

   53 Expr: Expr MUL . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 78


State 52

   50 Expr: Expr COMMA . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 79


State 53

   54 Expr: Expr DIV . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 80


State 54

   61 Expr: Expr EQ . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 81


State 55

   64 Expr: Expr GE . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 82


State 56

   66 Expr: Expr GT . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 83


State 57

   63 Expr: Expr LE . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 84


State 58

   65 Expr: Expr LT . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 85


State 59

   52 Expr: Expr MINUS . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 86


State 60

   55 Expr: Expr MOD . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 87


State 61

   62 Expr: Expr NE . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 88


State 62

   56 Expr: Expr OR . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 89


State 63

   51 Expr: Expr PLUS . Expr

    CHRLIT   shift, and go to state 27
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    ID       shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 90


State 64

   16 ParameterDeclaration: ID .

    $default  reduce using rule 16 (ParameterDeclaration)


State 65

   13 ParameterList: TypeSpec ParameterDeclaration . ParameterExtra

    COMMA  shift, and go to state 91

    $default  reduce using rule 15 (ParameterExtra)

    ParameterExtra  go to state 92


State 66

   12 FunctionDeclarator: ID LPAR ParameterList RPAR . FunctionHelper

    LBRACE  shift, and go to state 93
    SEMI    shift, and go to state 94

    FunctionHelper  go to state 95


State 67

   28 DeclarationExtra: COMMA Declarator DeclarationExtra .

    $default  reduce using rule 28 (DeclarationExtra)


State 68

   71 Expr: ID LPAR error . RPAR

    RPAR  shift, and go to state 96


State 69

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr
   79 ExprComma: Expr .

    BITWISEAND  shift, and go to state 46
    BITWISEOR   shift, and go to state 47
    BITWISEXOR  shift, and go to state 48
    AND         shift, and go to state 49
    ASSIGN      shift, and go to state 50
    MUL         shift, and go to state 51
    DIV         shift, and go to state 53
    EQ          shift, and go to state 54
    GE          shift, and go to state 55
    GT          shift, and go to state 56
    LE          shift, and go to state 57
    LT          shift, and go to state 58
    MINUS       shift, and go to state 59
    MOD         shift, and go to state 60
    NE          shift, and go to state 61
    OR          shift, and go to state 62
    PLUS        shift, and go to state 63

    $default  reduce using rule 79 (ExprComma)


State 70

   70 Expr: ID LPAR ExprComma . RPAR
   78 ExprComma: ExprComma . COMMA Expr

    COMMA  shift, and go to state 97
    RPAR   shift, and go to state 98


State 71

   73 Expr: LPAR error RPAR .

    $default  reduce using rule 73 (Expr)


State 72

   72 Expr: LPAR Expr RPAR .

    $default  reduce using rule 72 (Expr)


State 73

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   58     | Expr BITWISEAND Expr .
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr

    MUL    shift, and go to state 51
    DIV    shift, and go to state 53
    EQ     shift, and go to state 54
    GE     shift, and go to state 55
    GT     shift, and go to state 56
    LE     shift, and go to state 57
    LT     shift, and go to state 58
    MINUS  shift, and go to state 59
    MOD    shift, and go to state 60
    NE     shift, and go to state 61
    PLUS   shift, and go to state 63

    $default  reduce using rule 58 (Expr)


State 74

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   59     | Expr BITWISEOR Expr .
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr

    BITWISEAND  shift, and go to state 46
    BITWISEXOR  shift, and go to state 48
    MUL         shift, and go to state 51
    DIV         shift, and go to state 53
    EQ          shift, and go to state 54
    GE          shift, and go to state 55
    GT          shift, and go to state 56
    LE          shift, and go to state 57
    LT          shift, and go to state 58
    MINUS       shift, and go to state 59
    MOD         shift, and go to state 60
    NE          shift, and go to state 61
    PLUS        shift, and go to state 63

    $default  reduce using rule 59 (Expr)


State 75

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   60     | Expr BITWISEXOR Expr .
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr

    BITWISEAND  shift, and go to state 46
    MUL         shift, and go to state 51
    DIV         shift, and go to state 53
    EQ          shift, and go to state 54
    GE          shift, and go to state 55
    GT          shift, and go to state 56
    LE          shift, and go to state 57
    LT          shift, and go to state 58
    MINUS       shift, and go to state 59
    MOD         shift, and go to state 60
    NE          shift, and go to state 61
    PLUS        shift, and go to state 63

    $default  reduce using rule 60 (Expr)


State 76

   49 Expr: Expr . ASSIGN Expr
   50     | Expr . COMMA Expr
   51     | Expr . PLUS Expr
   52     | Expr . MINUS Expr
   53     | Expr . MUL Expr
   54     | Expr . DIV Expr
   55     | Expr . MOD Expr
   56     | Expr . OR Expr
   57     | Expr . AND Expr
   57     | Expr AND Expr .
   58     | Expr . BITWISEAND Expr
   59     | Expr . BITWISEOR Expr
   60     | Expr . BITWISEXOR Expr
   61     | Expr . EQ Expr
   62     | Expr . NE Expr
   63     | Expr . LE Expr
   64     | Expr . GE Expr
   65     | Expr . LT Expr
   66     | Expr . GT Expr
